model and template

--- a/zblog/templates/zblog/post_list.html
+++ b/zblog/templates/zblog/post_list.html
@@ -7,9 +7,16 @@
   <title>zblog::post_list</title>
 </head>
 <body>
-  <p>Hi there!</p>
-  <p>It's zblog\templates\zblog\post_list.html.</p>
-  <p>It works!</p>
+  <div>
+    {% for post in posts %}
+        <div>
+            <p>published: {{ post.published_date }}</p>
+            <h1><a href="">{{ post.title }}</a></h1>
+            <p>{{ post.text|linebreaksbr }}</p>
+        </div>
+    {% endfor %}
+  </div>
+
 
   <div>
       <h1><a href="">Django Girls Blog</a></h1>
@@ -26,5 +33,9 @@
       <h2><a href="">My second post</a></h2>
       <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut f.</p>
   </div>
+
+  <p>Hi there!</p>
+  <p>It's zblog\templates\zblog\post_list.html.</p>
+  <p>It works!</p>
 </body>
 </html>
