--- a/zblog/templates/zblog/base.html
+++ b/zblog/templates/zblog/base.html
@@ -12,8 +12,16 @@
   <title>zblog::post_list</title>
 </head>
 <body>
+  {% if user.is_authenticated %}
+    <a href="{% url 'post_new' %}" class="top-menu">
+      <span class="glyphicon glyphicon-plus"></span>
+    </a>
+  {% endif %}
   <div class="page-header">
-      <h1><a href="">Django Girls Blog</a></h1>
+    <a href="{% url 'post_new' %}" class="top-menu">
+      <span class="glyphicon glyphicon-plus"></span>
+    </a>
+    <h1><a href="">Django Girls Blog</a></h1>
   </div>
 
   <div class="content container">
