add link to my profile base

--- a/zprofile/templates/zprofile/base.html
+++ b/zprofile/templates/zprofile/base.html
@@ -54,7 +54,9 @@
     <div class="overlay">
       <div class="container">
         <h1 class="display-1 text-white">Let's 2DoIs2Be and Joywins!</h1>
-        <h2 class="display-4 text-white">Here you visit one of the man who has an ability to enrich our ecosystem.</h2>
+        <h2 class="display-4 text-white">Welcome to a person's profile page who has an ability to enrich our ecosystem like an honeybee.</h2>
+        <br/>
+        <h3 class="display-5 text-white"><a href="mailto:joywins@daum.net">joywins@daum.net</a></h3>
       </div>
     </div>
   </header>
@@ -70,7 +72,20 @@
         <div class="col-md-6 order-1">
           <div class="p-5">
             <h2 class="display-4">Coding Teacher...</h2>
-            <p>I like studying and showing something good to others.</p>
+            <p>
+              I teach
+              <a href="https://youtu.be/sMBkGpgXoF8" target="_blank">Scratch</a> and
+              <a href="https://youtu.be/dXciKKRPhe0" target="_blank">Hamsterbot</a>
+              to middle school students, and can teach Arduino,
+              <a href="https://docs.google.com/document/d/1saXPWaHAtDwcsCOrQBB29CSbWYLJdUDiMYR1aPBXuZw/edit?usp=sharing" target="_blank">Python</a>, too.<br/>
+              I beieve it is a good education to help one to make a detailed dream with one's vision where one's aspiration breathes.<br/>
+              Since AI will do much better, Coding class must not be only a learning how to make a program.<br/>
+              My Coding class focuses on leading students to enjoy thinking together, helping together, solving together.<br/>
+              Therefore, Coding will be a big help for students to discover what his/her heart is excited about.<br/>
+              I like studying and
+              <a href="https://www.slideshare.net/seoyunseoktudoistube/share-80575882" target="_blank">sharing my teaching material</a>
+              with others.
+            </p>
           </div>
         </div>
       </div>
@@ -87,11 +102,21 @@
         </div>
         <div class="col-md-6">
           <div class="p-5">
-            <h2 class="display-4">Programmer</h2>
-            <p>Enjoyable experience and my growing point.
-                more than 10,000 working hours experience of ABAP programmer.
-                2years experience of Java and Springframework.
-                Now expand to Python and Javascript.</p>
+            <h2 class="display-4">Programmer...</h2>
+            <p>
+              If you look for a programmer who can raise the productivity of your team and help to grow a technical ecosystem,<br/>
+              then it will be me the person whom you are looking for.<br/>
+              For example, I have carried out a constant effort to summarize what I understood and how I approached to new techinical challenge,<br/>
+              because I believe it will save team's energy a lot and faciliate to keep member's level evenly.
+              So I keep them on
+              <a href="https://github.com/tudoistube" target="_blank">my GitHub</a> with
+              <a href="https://docs.google.com/spreadsheets/d/1d_rGlZb12XJBxke2azZnkXGejFLXdmr4zkRTRXtwt1A/edit?usp=sharing" target="_blank">sharable documents</a>
+              in public.
+            </p>
+            <p>An enjoyable experience is growing with : <br/>
+               more than 6 years experience of SAP ERP ABAP,<br/>
+               2 years experience of Java and Springframework,<br/>
+               and now to Python and Javascript!</p>
           </div>
         </div>
       </div>
@@ -111,10 +136,12 @@
         <div class="col-md-6 order-1">
           <div class="p-5">
             <h2 class="display-4">Talent Donation Open Project as my social enterprise biz item</h2>
-            <p>This is a smart and warm shopping system to mix shopping and donation for alone weak elder citizen.
-               Simply, I hope to be taken care of myself by some good Samaritan in future, by my becoming a good Samaritan to take care of the present alone elder citizen.
-               If you are interested in my idea, Please click the right-side image to develop our idea.</p>
-               <a href="http://joywins.creatorlink.net/" target="_blank">more...</a>
+            <p>
+               This is a smart and warm shopping system to mix shopping and donation for alone weak elder citizen.<br/>
+               Simply, I hope to be taken care of myself by some good Samaritan in future, by my becoming a good Samaritan to take care of the present alone elder citizen.<br/>
+               Our silence keeps our reality unchanged, but our action change our future!<br/>
+               <a href="http://joywins.creatorlink.net/" target="_blank">Here</a> you can see more details, and I hope you will join in together, if you feel same about this idea^_____^!!!<br/>
+            </p>
           </div>
         </div>
       </div>
