add link to my profile base

--- a/zprofile/templates/zprofile/base.html
+++ b/zprofile/templates/zprofile/base.html
@@ -104,19 +104,21 @@
           <div class="p-5">
             <h2 class="display-4">Programmer...</h2>
             <p>
+               An enjoyable experience is growing with : <br/>
+               more than 6 years experience of SAP ERP ABAP,<br/>
+               2 years experience of Java and Springframework,<br/>
+               and now to Python and Javascript!
+            </p>
+            <p>
               If you look for a programmer who can raise the productivity of your team and help to grow a technical ecosystem,
               then it will be me the person whom you are looking for.<br/>
-              For example, I have carried out a constant effort to summarize what I understood and how I approached to new techinical challenge,<br/>
-              because I believe it will save team's energy a lot and faciliate to keep member's level evenly.
+              For example, I have carried out a constant effort to summarize what I understood and how I approached to new techinical challenge.<br/>
+              Because I believe it will save a team's energy a lot and faciliate to keep member's level evenly, and it will help me to raise my ability higher enough to challenge bigger task.<br/>
               So I keep them on
               <a href="https://github.com/tudoistube" target="_blank">my GitHub</a> with
               <a href="https://docs.google.com/spreadsheets/d/1d_rGlZb12XJBxke2azZnkXGejFLXdmr4zkRTRXtwt1A/edit?usp=sharing" target="_blank">sharable documents</a>
               in public.
             </p>
-            <p>An enjoyable experience is growing with : <br/>
-               more than 6 years experience of SAP ERP ABAP,<br/>
-               2 years experience of Java and Springframework,<br/>
-               and now to Python and Javascript!</p>
           </div>
         </div>
       </div>
