--- a/zprofile/static/css/one-page-wonder.css
+++ b/zprofile/static/css/one-page-wonder.css
@@ -15,7 +15,8 @@ body {
 }
 
 header.masthead {
-  background: url('https://unsplash.it/1900/1080?image=304') no-repeat center center scroll;
+  font-family: 'Righteous', cursive;
+  background: url('../images/header-bg2.jpg') no-repeat center center scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -25,7 +26,7 @@ header.masthead {
 header.masthead>.overlay {
   padding: 5rem 0;
   text-align: center;
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 0, 0.2);
 }
 
 @media (min-width: 992px) {
