--- a/zprofile/templates/zprofile/base.html
+++ b/zprofile/templates/zprofile/base.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <link href="http://fonts.googleapis.com/css?family=Maven Pro&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+  <link href="http://fonts.googleapis.com/css?family=Righteous&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="{% static '/vendor/bootstrap/css/bootstrap.min.css' %}">
