modified base.html for showing images

--- a/zprofile/templates/zprofile/base.html
+++ b/zprofile/templates/zprofile/base.html
@@ -66,7 +66,7 @@
       <div class="row align-items-center">
         <div class="col-md-6 order-2">
           <div class="p-5">
-            <img class="img-fluid rounded-circle" src="{% static 'images/codingTeacher.png' %}" alt="codingTeacher">
+            <img class="img-fluid rounded-circle" src="{% static '/images/codingTeacher.png' %}" alt="codingTeacher">
           </div>
         </div>
         <div class="col-md-6 order-1">
@@ -97,7 +97,7 @@
       <div class="row align-items-center">
         <div class="col-md-6">
           <div class="p-5">
-            <img class="img-fluid rounded-circle" src="{% static 'images/programmer.png' %}" alt="programmer">
+            <img class="img-fluid rounded-circle" src="{% static '/images/programmer.png' %}" alt="programmer">
           </div>
         </div>
         <div class="col-md-6">
@@ -131,7 +131,7 @@
         <div class="col-md-6 order-2">
           <div class="p-5">
             <a href="http://joywins.creatorlink.net/" target="_blank">
-              <img class="img-fluid rounded-circle" src="{% static 'images/joywinsLogo.jpg' %}" alt="joywins">
+              <img class="img-fluid rounded-circle" src="{% static '/images/joywinsLogo.jpg' %}" alt="joywins">
             </a>
           </div>
         </div>
