--- a/zprofile/templates/zprofile/home_en.html
+++ b/zprofile/templates/zprofile/home_en.html
@@ -46,7 +46,7 @@
             <a class="nav-link page-scroll" href="#socialEconomyEntrepreneur">SocialEconomyEntrepreneur</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link page-scroll" href="{% url 'home_en' %}">English Language</a>
+            <a class="nav-link page-scroll" href="{% url 'home' %}">Korean Language</a>
           </li>
         </ul>
       </div>
